@@ -1,1 +1,1 @@
-1.11.0
+1.12.0
