@@ -2,6 +2,7 @@
   "data": {
     "id": "145103",
     "name": "",
-    "address": "bat1"
+    "address": "bat1",
+    "firmware": "1.0"
   }
 }
